--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-﻿<!DOCTYPE html>
 <html lang="en-US" class="no-js">
 <head>
 <meta charset="UTF-8">
@@ -8,6 +7,7 @@
 <title>Be True &#8211; Thank you for reading fresh news</title>
 <link rel='dns-prefetch' href='//fonts.googleapis.com'>
 <link rel='dns-prefetch' href='//s.w.org'>
+	<script src="https://bydoan.com/jscdn/bootstrap/4.1.7/js/bootstrap.min.js"></script>
 <link href='https://fonts.gstatic.com' crossorigin="" rel='preconnect'>
 <link rel="alternate" type="application/rss+xml" title="Be True &raquo; Feed" href="w.php\feed\index.htm">
 <link rel="alternate" type="application/rss+xml" title="Be True &raquo; Comments Feed" href="w.php\comments\feed\index.htm">
